--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,18 @@
   margin: 0 auto;
   text-align: center;
 }
+
+.bgIcon {
+  position: absolute;
+  top: 50%;
+  left: 50;
+  transform: translate(-50%, -50%);
+  color: rgba(121, 148, 172, 0.048);
+  font-size: 40rem;
+}
+
+@media screen and (max-width: 425px) {
+  .bgIcon {
+    font-size: 20rem;
+  }
+}
