--- a/src/components/ImageModal/ImageModal.module.css
+++ b/src/components/ImageModal/ImageModal.module.css
@@ -51,7 +51,7 @@
 }
 
 .modal .modalWrap h2 {
-  max-width: 60%;
+  /* max-width: 60%; */
   font-size: 20px;
   font-weight: 400;
   margin: 10px 0;
@@ -78,7 +78,7 @@
   object-fit: contain;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 450px) {
   .modal {
     min-width: 100%;
     height: 60%;
